# xar_win

./: .gitignore
xar/: CMakeLists.txt  Makefile.in
xar/lib/: asprintf.h  stat.c  util.c
xar/src/: config.h  xar.h
